--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,34 +1,51 @@
-name: Generate snake animation
-
+name: Generate Snake
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
 
-  workflow_dispatch:
+  schedule:
 
-  push:
-    branches:
-    - master
+      # every 6 hours
 
-jobs:
-  generate:
-    permissions:
-      contents: write
+    - cron: "0 */6 * * *"
+    workflow_dispatch:
+    jobs:
+
+  # This workflow contains a single job called "build"
+
+  build:
+
+    # The type of runner that the job will run on
+
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    # Steps represent a sequence of tasks that will be executed as part of the job
+steps:
 
-    steps:
-      - name: generate snake.svg
-        uses: Platane/snk/svg-only@v3
-        with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg?palette=github-dark
+# Checks repo under $GITHUB_WORKSHOP, so your job can access it
+  - uses: actions/checkout@v2
 
+# Generates the snake  
+  - uses: Platane/snk@master
+    id: snake-gif
+    with:
+      github_user_name: nghlong3004
+      # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+      gif_out_path: dist/github-contribution-grid-snake.gif
+      svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - name: push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+ # show the status of the build. Makes it easier for debugging (if there's any issues).
+  - run: git status
+
+  # Push the changes
+  - name: Push changes
+    uses: ad-m/github-push-action@master
+    with:
+      github_token: ${{ secrets.GITHUB_TOKEN }}
+      branch: master
+      force: true
+
+  - uses: crazy-max/ghaction-github-pages@v2.1.3
+    with:
+      # the output branch we mentioned above
+      target_branch: output
+      build_dir: dist
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
